unpackaged/main/default/objects/SWOT_Focus_Point__c/SWOT_Focus_Point__c.object-meta.xml
<CustomObject>
    <label>SWOT Focus Point</label>
    <nameField>
        <displayFormat>SWF-{00000}</displayFormat>
        <label>SWOT Focus Point Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SWOT Focus Points</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>