unpackaged/main/default/objects/SWOT_Focus_Point__c/fields/Focus_Point__c.field-meta.xml
<CustomField>
    <fullName>Focus_Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Focus Point</label>
    <referenceTo>Focus_Point__c</referenceTo>
    <relationshipLabel>SWOTs</relationshipLabel>
    <relationshipName>SWOT_Focus_Points</relationshipName>
    <type>Lookup</type>
</CustomField>