unpackaged/main/default/objects/SWOT_Focus_Point__c/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <formula>TEXT( Focus_Point__r.Interest__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest</label>
    <type>Text</type>
</CustomField>