unpackaged/main/default/objects/SWOT_Focus_Point__c/fields/Level_of_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Satisfaction__c</fullName>
    <formula>Focus_Point__r.Level_of_Satisfaction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level of Satisfaction</label>
    <type>Text</type>
</CustomField>