unpackaged/main/default/objects/SWOT_Focus_Point__c/fields/SWOT__c.field-meta.xml
<CustomField>
    <fullName>SWOT__c</fullName>
    <label>SWOT</label>
    <referenceTo>SWOT__c</referenceTo>
    <relationshipLabel>Focus Points</relationshipLabel>
    <relationshipName>SWOT_Focus_Points</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>