unpackaged/main/default/objects/SWOT_Focus_Point__c/fields/Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Weaknesses__c</fullName>
    <formula>TEXT(SWOT__r.Weaknesses__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weaknesses</label>
    <type>Text</type>
</CustomField>