unpackaged/main/default/objects/SWOT_Focus_Point__c/fields/Workstream__c.field-meta.xml
<CustomField>
    <fullName>Workstream__c</fullName>
    <formula>TEXT( Focus_Point__r.Workstream__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workstream</label>
    <type>Text</type>
</CustomField>